# f_link

./: .gitignore  .gitmodules  .pubignore  CHANGELOG.md  LICENSE  README.md  dev_readme.md  ffigen.yaml  pubspec.yaml  updatesub.sh  updatesubs
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: .pubignore  README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/f_link_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: audio.dart  counter_int.dart  int_selector.dart  main.dart  options.dart  state.dart  state_app.dart  state_audio.dart  state_link.dart  state_settings.dart  test.dart  utils.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: f_link.podspec
lib/: f_link.dart  f_link_bindings_generated.dart
linux/: CMakeLists.txt
macos/: f_link.podspec
macos/Classes/: f_link.c
src/: .pubignore  CMakeLists.txt  f_link.c
windows/: CMakeLists.txt
